more fixed Roboto font on mobiles devices

--- a/portfolio/static/portfolio/css/main.css
+++ b/portfolio/static/portfolio/css/main.css
@@ -12,8 +12,9 @@ p,
 .mobile_number,
 footer,
 #carrier {
-  font-family:Roboto Light;
+  font-family:Roboto;
   font-size: 20px;
+  font-weight: 300;
 }
 
 #aboutMe,
